--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -25,7 +25,7 @@ requirements:
   run:
     - python >=${{ python_min }}
     - databricks-sql-connector >=4.0.0
-    - pyarrow >=14.0.1,<17
+    - pyarrow >=14.0.1
     - sqlalchemy >=2.0.21
 
 tests:
